--- a/bricks/modules/dashboard/brick.yaml
+++ b/bricks/modules/dashboard/brick.yaml
@@ -1,4 +1,4 @@
-name: dashboard
+name: dashboard_module
 description: A dashboard brick with bottom navigation bar and screens
 version: 1.0.0
 environment:
